# MCPFramework-Pyshark

./: .gitignore  README.md  claude-desktop-config.json  pyproject.toml  requirements.txt  server.py
examples/: curl_summarize_last_two_minutes.sh  demo_full_pipeline.py
mcppython/: bridge_server.py
src/: index.ts
